[gd_scene load_steps=9 format=3 uid="uid://ckuq8orlnqrj0"]

[ext_resource type="Texture2D" uid="uid://jk1eq2v5m1b1" path="res://entity/menus/assets/HeavenShopSketch.png" id="1_fr3i6"]
[ext_resource type="Script" uid="uid://cujo56nl0aphg" path="res://entity/menus/scripts/save_menuUI.gd" id="1_sm20b"]
[ext_resource type="FontFile" uid="uid://crsogjk4346dd" path="res://assets/fonts/yoster.ttf" id="2_sm20b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0omfi"]
texture = ExtResource("1_fr3i6")
modulate_color = Color(0.37413925, 0.37413928, 0.37413922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gur0s"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igu8h"]
bg_color = Color(0.43134022, 0.43134025, 0.43134025, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aa3h"]
bg_color = Color(0.66656864, 0.6665687, 0.66656864, 1)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_45eqv"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sm20b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0omfi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -57.0
offset_right = 124.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Save 1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Save 1"

[node name="Save 2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Save 2"

[node name="Save 3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Save 3"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.875
offset_top = -188.0
offset_right = 172.875
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8453231, 0.42024752, 0.17905027, 1)
theme_override_colors/font_shadow_color = Color(0.034469567, 0.03361635, 0.033827864, 0)
theme_override_fonts/font = ExtResource("2_sm20b")
theme_override_font_sizes/font_size = 45
text = "Purrgatory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 132.0
offset_top = -81.0
offset_right = 240.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Delete1" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Delete"

[node name="Delete2" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Delete"

[node name="Delete3" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_gur0s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_igu8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6aa3h")
theme_override_styles/focus = SubResource("StyleBoxEmpty_45eqv")
text = "Delete"

[connection signal="mouse_exited" from="VBoxContainer/Save 1" to="." method="_on_save_1_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Save 1" to="." method="_on_save_1_pressed"]
[connection signal="mouse_exited" from="VBoxContainer/Save 2" to="." method="_on_save_2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Save 2" to="." method="_on_save_2_pressed"]
[connection signal="mouse_exited" from="VBoxContainer/Save 3" to="." method="_on_save_3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Save 3" to="." method="_on_save_3_pressed"]
[connection signal="mouse_exited" from="VBoxContainer/Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_exited" from="VBoxContainer2/Delete1" to="." method="_on_delete_1_mouse_exited"]
[connection signal="pressed" from="VBoxContainer2/Delete1" to="." method="_on_delete_1_pressed"]
[connection signal="mouse_exited" from="VBoxContainer2/Delete2" to="." method="_on_delete_2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer2/Delete2" to="." method="_on_delete_2_pressed"]
[connection signal="mouse_exited" from="VBoxContainer2/Delete3" to="." method="_on_delete_3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer2/Delete3" to="." method="_on_delete_3_pressed"]
